# rust-voice-recorder

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
server/: Cargo.toml  Dockerfile
server/src/: main.rs
web/: index.html
